@@ -1011,7 +1011,7 @@ BEGIN
     ID_FILE_SAVE_AS         "Save the active document with a new name\nSave As"
     IDS_OPEN_DIALOG_TITLE   "Open Test Configuration File"
     IDS_SAVE_DIALOG_TITLE   "Save Test Configuration File"
-    IDS_CMDLINE_SYNTAX      "SYNTAX\niometer\niometer /?\niometer config_file [result_file [timeout_value]]\niometer [/c config_file] [/r results_file] [/t timeout_value]\n\n    ? - show Iometer version number and command line syntax\n\n    config_file - the name of the Iometer configuration file to restore\n\twhen Iometer starts (must be a valid .icf file)\n\n    results_file - the name of a writable text file to which the test\n\tresults should be appended.  If the file doesn't exist, it will be\n\tcreated.\n\n    timeout_value - the number of seconds to wait for managers to log in\n\twhen restoring a config file.\n\n    port_number - the port number iometer listens on.\n\n    If both config_file and results_file are specified, Iometer will\n    attempt to run the test in batch mode, requiring no user intervention\n    to load the config file, start the tests, stop the tests (if a run time\n    was specified in the Test Setup tab), and close Iometer.  Batch mode\n    can be canceled by aborting the manager waiting list dialog or by\n    manually stopping a test while it is running."
+    IDS_CMDLINE_SYNTAX      "SYNTAX\niometer\niometer /?\niometer config_file [result_file [timeout_value]]\niometer [/c config_file] [/r results_file] [/t timeout_value] [/p port] [/m 1]\n\n    ? - show Iometer version number and command line syntax\n\n    config_file - the name of the Iometer configuration file to restore\n\twhen Iometer starts (must be a valid .icf file)\n\n    results_file - the name of a writable text file to which the test\n\tresults should be appended.  If the file doesn't exist, it will be\n\tcreated.\n\n    timeout_value - the number of seconds to wait for managers to log in\n\twhen restoring a config file.\n\n    port_number - the port number iometer listens on.\n\n    specify /m option will have BigMeter shown automatically.\n\n    If both config_file and results_file are specified, Iometer will\n    attempt to run the test in batch mode, requiring no user intervention\n    to load the config file, start the tests, stop the tests (if a run time\n    was specified in the Test Setup tab), and close Iometer.  Batch mode\n    can be canceled by aborting the manager waiting list dialog or by\n    manually stopping a test while it is running."
     IDS_VERSION_OUTPUT      "Version %s "
 END
 
