@@ -74,6 +74,7 @@ class CGalileoCmdLine:public CCommandLineInfo {
 	CString GetResultFile();
 	int GetTimeout();
 	int GetLoginportnumber();
+	BOOL GetShowBigmeter();
 
 	// Interactive mode is the normal mode of operation for Iometer.
 	// If the user specifies both the config file and the results file
@@ -103,6 +104,7 @@ class CGalileoCmdLine:public CCommandLineInfo {
 	CString m_sResultFile;	// the specified result file
 	int m_iTimeout;		// the specified timeout value
 	int m_iLoginportnumber; // the specified port number
+	BOOL m_bShowBigmeter;// automatically show bigmeter
 
 	BOOL m_bOverrideBatch;	// if set, forces IsBatchMode to return FALSE
 };
